Sharpen catkin_lint settings for CI
(cherry picked from commit 3939a4d866071b2a96c2651cb13c2f3430ffc9c7)

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ env:
   global:
     - AFTER_SCRIPT='apt list --installed | grep "^ros-"'
   matrix:
-    - ROS_DISTRO="melodic" ROS_REPO=ros CATKIN_LINT=true
-    - ROS_DISTRO="melodic" ROS_REPO=ros-shadow-fixed CATKIN_LINT=true
+    - ROS_DISTRO="melodic" ROS_REPO=ros CATKIN_LINT=true CATKIN_LINT_ARGS='--strict'
+    - ROS_DISTRO="melodic" ROS_REPO=ros-shadow-fixed CATKIN_LINT=true CATKIN_LINT_ARGS='--strict'
 install:
   - git clone --depth=1 https://github.com/ros-industrial/industrial_ci.git .industrial_ci
 script:
