--- a/pilz_store_positions/package.xml
+++ b/pilz_store_positions/package.xml
@@ -28,4 +28,5 @@
   <test_depend>rostest</test_depend>
   <test_depend>ros_pytest</test_depend>
   <test_depend>visualization_msgs</test_depend>
+  <test_depend>code_coverage</test_depend>
 </package>
