Seperate jobs for each coverage check

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,20 @@ env:
     - ROS_REPO=testing
     - ROS_REPO="testing"
       CATKIN_LINT=false NOT_TEST_BUILD=true
-      AFTER_SCRIPT="source /root/ici/industrial_ci_addons/check_coverage.sh && check_coverage pilz_extensions pilz_robot_programming pilz_trajectory_generation pilz_store_positions"
+      AFTER_SCRIPT="source /root/ici/industrial_ci_addons/check_coverage.sh && check_coverage pilz_extensions"
+      CMAKE_ARGS="-DENABLE_COVERAGE_TESTING=ON -DCMAKE_BUILD_TYPE=Debug"
+    - ROS_REPO="testing"
+      CATKIN_LINT=false NOT_TEST_BUILD=true
+      AFTER_SCRIPT="source /root/ici/industrial_ci_addons/check_coverage.sh && check_coverage pilz_robot_programming"
+      CMAKE_ARGS="-DENABLE_COVERAGE_TESTING=ON -DCMAKE_BUILD_TYPE=Debug"
+    - ROS_REPO="testing"
+      CATKIN_LINT=false NOT_TEST_BUILD=true
+      AFTER_SCRIPT="source /root/ici/industrial_ci_addons/check_coverage.sh && check_coverage pilz_trajectory_generation"
+      CMAKE_ARGS="-DENABLE_COVERAGE_TESTING=ON -DCMAKE_BUILD_TYPE=Debug"
+    - ROS_REPO="testing"
+      PARALLEL_TESTS=false
+      CATKIN_LINT=false NOT_TEST_BUILD=true
+      AFTER_SCRIPT="source /root/ici/industrial_ci_addons/check_coverage.sh && check_coverage pilz_store_positions"
       CMAKE_ARGS="-DENABLE_COVERAGE_TESTING=ON -DCMAKE_BUILD_TYPE=Debug"
 matrix:
   allow_failures:
