--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ env:
     - ROS_REPO=testing
     - ROS_REPO="testing"
       CATKIN_LINT=false NOT_TEST_BUILD=true
+      PARALLEL_TESTS=false
       AFTER_SCRIPT="source /root/ici/industrial_ci_addons/check_coverage.sh && check_coverage pilz_extensions"
       CMAKE_ARGS="-DENABLE_COVERAGE_TESTING=ON -DCMAKE_BUILD_TYPE=Debug"
     - ROS_REPO="testing"
