Remove DEPEND tests from pilz_extensions
* Caused trouble with CI coverage generation

--- a/pilz_extensions/CMakeLists.txt
+++ b/pilz_extensions/CMakeLists.txt
@@ -81,7 +81,7 @@ if(CATKIN_ENABLE_TESTING)
     set(COVERAGE_EXCLUDES "*/${PROJECT_NAME}/test*")
     add_code_coverage(
       NAME ${PROJECT_NAME}_coverage
-      DEPENDENCIES tests
+      #DEPENDENCIES tests
     )
   endif()
 
